--- a/Fixit8Sam.project
+++ b/Fixit8Sam.project
@@ -34,8 +34,8 @@
           "!type": "External",
           "file": [
             "forms",
-            "calcAB",
-            "calcAB.json"
+            "calc",
+            "calc.json"
           ]
         }
       ],
